statefulset-kibana.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kibana
  namespace: efk  # 네임스페이스를 efk로 설정
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: elastic/kibana:7.17.7
        ports:
        - containerPort: 5601
