service-kibana.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: efk  # 네임스페이스를 efk로 설정
  labels:
    app: kibana
spec:
  ports:
  - name: kibana
    port: 5601
    protocol: TCP
    targetPort: 5601
  selector:
    app: kibana
  type: ClusterIP  # ClusterIP 타입으로 설정
